--- a/index.html
+++ b/index.html
@@ -1,137 +1,81 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Matthijs Berghuis EPIC SVG's</title>
+<meta charset="utf-8">
+  <title>Anders mag</title>
+   <meta name="author" content="Theo den Blanken">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <link rel="stylesheet" href="andersMag.css">
+
 </head>
-<body>
-    <div class="svg1">
-        <?xml version="1.0" encoding="utf-8"?>
-<!-- Generator: Adobe Illustrator 23.0.6, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.1" id="Laag_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 800 800" style="enable-background:new 0 0 800 800;" xml:space="preserve">
-<style type="text/css">
-	.st0{font-family:'ComicSansMS-Bold';}
-	.st1{font-size:94.9329px;}
-	.st2{fill:url(#SVGID_1_);stroke:url(#SVGID_2_);stroke-miterlimit:10;}
-	.st3{fill:#FFFFFF;}
-	.st4{font-size:196.0807px;}
-	.st5{fill:#6B6A4A;}
-</style>
-<g id="CV4Az9.tif">
-	
-		<image style="overflow:visible;" width="300" height="300" id="Layer_0_3_" xlink:href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAASsAAACYCAYAAAC8jc/bAAAACXBIWXMAAAmIAAAJiAFxlewOAAAA
-GXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAEilJREFUeNrs3QtwVFWeBvDv9u1O
-dyeBhEBICBBCEp6JvBEhwcCgAwwwIMzAgjx3ZpZyXQUZ1nJnS3cddtZanVldttYpsLR21LCC8hAG
-qRF5RAQZBCRAeJMEEkgIIYRX0u/ePgcowQEGyLmdfnw/61Yrwdu3+3R/Offcc/8HICIKA5qumzMC
-j7P5VhBRqIfVsMDjFr4VRBTKTHwLiIhhRUTEsCIihhUREcOKiIhhRUQMKyIihhUREcOKiBhWREQM
-KyIihhURMayIiBhWRMSwIiJiWBERMayIiGFFRMSwIiJiWBERw4qIiGFFRMSwIiKGFRERw4qIGFZE
-RAwrIiKGFRExrIiIGFZERAwrImJYERExrIiIGFZExLAiImJYERExrIiIYUVExLAiIoYVERHDioiI
-YUVEDCsiIoYVERHDiogYVkREDCsiIoYVETGsiIgYVkTEsCIiYlgRETGsiIhhRUTEsCIiYlgREcOK
-iIhhRUTEsCIihhUREcOKiIhhRUQMKyIihhURMayIiBhWREQMKyJiWBERMayIiBhWRMSwIiJiWBER
-MayIiGFFRGQAc6S/wBmW/lhgLUCy3iIsjvdz/xH827WNKPXWhfyxzo9/HAv14WHxvu7yn8J/Oovw
-lbOM33r2rEiFH7iykaYlwqRpIX+skz292GDEsIrarq7VjB/ZuiHVFNo9wV62NKRbW7PBiGEVzX7s
-zUGaPyGkj/EfTQVsKGJYRbvEmDgMtncK2eNLsyRguN6FDUUMKwImeR8J2WNbYB8a+ORobCRiWBGQ
-bW0b2JJD7rha6FZMcfRhAxHDir7zQszQkDumv4t9DJpdZ+MQw4q+M96dg0TdHjofFpMJc1yPsmGI
-YUXfYzXhF7GDQuZwpth7I9EWy3YhhhX9pVmugbJHEwrme4ayQYhhRXcmejIT7bnNfhwF9ky0t7Vi
-gxDDiu7Ro3HnN/sx/NI7jA1BDCu6twx7MvpbOzbb82fHJKOfvSMbghhWkaLWfxVOjxvwq9/3PHPz
-9a4WWtXeWuP2e1HvboDP6Q3aa/DDkGYhhpXKD6k/aB/So1oNNmnHUIcG5fv+gakLUmNaBv39a22J
-w1hvT6X7PI2L+MC3Gy6XJ2ivQ7uxEcOKbljtPYgzvksGtJSG6dZ+QX89s20DAIu6r7nP50OFsx5F
-rCtFDKvmowX+Oem+gEOuajT4XMr3P9nZC3oQpzGI55ri7K10nzXaVWzVTsjQImJYfS9Agt39/1gr
-RqVWr3y/afZWGGHNDtrr+KG1q3xOZafkfj9OuS9itecgv3nEsAoFu1wVONR4Dg6fW/m+n9Pyghbz
-8zS1g/piLO8rXykueK7xQ0IPzMy3QD2f34eP9WLkau2QjTZK993X1BE9bKk47Kg29DX0t3VArrm9
-uh36gYpAr+oTbzE/IA/BbrfBYomBpmnQdR2xsbHy8U68Xi8aGhrk402NjY1wu92yd8uwotuIhQmO
-ec8h3ZaIGJPCt1nX8A++wXgWqw09/vmiV6Xw/PkSGvFn3ylUeC7xw3GL2Fg7kpPbIjExEUlJrdC2
-bVukp6cjLS0N8fHx8tFmswXCyh4IK4uSsKqurobD4ZCPly9fQW3teVRWVuLixXpcvXoVly5dwoUL
-F+B0OkMq3BhWBvEGelcr9f3ooaWiM9TWKh/l74FW5j/hoqfBkGPPsCShwKRwbEz0qrz1WO6P7l5V
-fHwcUlJSkZWVhd69eyM3NweZmZ3Rrl2aDKsWLVrcNYCCQQTarWFVVVWFkpJDOHSoBAcPlshAEz9j
-WEWgLc6TmOY9j46B3pXZpO5DaI2x4Of6o3jj6lZDjvtZyxCYzOqGM6/CiW89lTjmOh9V7W8yabLX
-9Mgjj2Do0Hzk5+cFgiobbdq0kb2l0DvVtMstOTkZ2dnXf1lNmDBBPtbW1sqwKi4uRlFREfbs2Ysj
-R47c1ntjWIUxl9+LleaDyNZS0AlqbwKe7eqPxdpXcPrVTqxMNMdiAtSWVK7w12MFoqdXJU7fcnJ6
-YuzYsRg9ejS6du0qT9vCmQhYsfXp0wezZs2S4bVv3z6sWrUKa9euDZxSnmNYhbvPncfwU18vdIhJ
-UDpHKsEej3HmnvikYb/S451jGwC7HqPu1MLnRomzCvvcZ6MipAYNehQzZ87EyJEj5Zc7UonX9sQT
-T8ht3rx5WL58OZYuXWpoaHHqgsHE9IV1pkOo0i4r3/czvsGAwsVQrSYzfqa4EqiYb7ZSOxDWV6Hu
-53RP9KRee+3fUVhYiKeffjqig+r7unXrhldeeQWbNm3CxIlPMazC2R+dh1HqrIVX8aztbjGpGGjt
-oGx/T9lykWiPU3ca7PPgRON5fO0qj9i2FWNPEydOxLvvvou5c+dGVUjdKbTee+89/OpX/2TIhQKe
-BgaBuPVmg+kIsrVkpEHh4qWBTtVzpjzMxEdN/62lmfCMdwhgUXd4ZwO9yTXmg/C4I/PWGjEONXny
-T7Fw4UJ07949qM9988qdeBS3LolHl8slpzeIABWP4vjEqWlMzPX5WcE6FRa9LHE8b775FsMqHK1x
-lWCsP0dWTjAp/OAUaF3QzpKAKnfTLinn2zojy6Ju6S/RiywL9Ca/8ByP2FO/sWPHYMGCBUEJqvPn
-z8spBDt3/hn79x9ARcVp1Ndfuq+wysrKxMCBA9C3bz/k5uaiZcuWhoaX2WzGokWL8OWXX8qrhgyr
-MHPF68AX5qNyRnsKWijbr2424e/xGF52/6lJ+1mAoUongYoxuj/qh+AMYhmYYOrbt68cm+rZs6eh
-z1NXV4f3338fK1askHOexGTPBx3/27lzJwoLlyEuLg59+vTG9OnT5alr69atDTtuEZiihzV+/ASG
-VTha6T2IUe4eaGuJV/qbbbK3D17Tt6LB63yo/7+nNRUD9HRlxyNuNypz12G960hEtqPZrCN/6FAM
-HjzY0Oc5efIEXn75ZaxfvwHXrjX9fkqxj+3bd2Dv3r2B4CuRp68dOnQw7PhHjBiBhIQEZRNJOcAe
-RHWea9jqO45aqL2RN85qw1T7w5dyeV7Pk7fxqFKDq/jCfxRXHzI8Q11mZhYGDhiApKQkw55DfMFf
-euklrF27TklQ3aqx0YElS5bKyZ2ip2Zk76pXL3Vz9hhWQbbCux+nAr0O1Zfyf+4aJAfJH1SyOR4j
-tR7KjuO7MjAlEduGHTt2CGzG1qQXV9V27twFh8OYwBf3CR4/flwO0hupc+fOPA0MV+c8V7BdL0Um
-WiMJ6qYJdLQnoUDPwpbGBxvQftY6GBazusvMN8vA1EV4GZjy8nJ4PMaNx61cuQo1NTWGvobTp08b
-2rMSOnXqxLAKZ8u9xRjmzkaSJU7poPY85GEL7j+s4nQrpnr7qfsU3CgD83GEl4HZtGmz3Ci4eBrY
-DE576vG17xTq0ah0v2KQvGvM/U8/eNreV453qXKzDEwly8CQAdizaib/59+HId7OSNTt6npXuiYr
-JsxzffrX/6rJhLmuxwC7ul7VaZaBaTZiWoKYVyUGtcW/i+oJ4rFlyxbyilzbtimyRI2ojyXmWYmZ
-9h07piM1NZVhRfd20lWL3dopZOhJaAl1vZsx/hz8i3kj6v9KravR1m5IiVE3m/56GZiKqCsDY+hp
-T+AXiqhxJTYROKLmlSjf0qqVKNKXLIv0idARfy5+fqewas76WAyriOpdFWOQNwM5ejtlvSubxYI5
-pgF48+qX9/hbGp4Tk0AVul4GZj8b9UG/gGYdSUmtZQClpqbIAMrIyJCbmAMlJm7eGlZidjhPAyno
-DrvOYa9WiU6B3lU8rMr2+zPXQPyPtgOuu9S6GmjrgBxLO2XPd7MMTHEUlIFp0i+SQK9HhE/79u3R
-vXs3WS1UPKand5JhJX4mbpMhhlVI+gj70N+fjp5airJ9Jtrj8SO9O9Y03nnJqwXa40qvQlZqlyK+
-DMzDhpMIJhFK/fv3Czz2QXZ2lhwnEvfsEcMqrOx3VeGA/ywyrK0Qa1JX9O4ZDMEarUTM0rztzzMt
-rZFvylL2PLIMjOMcvvaUszEDxOC1qAw6fPgwFBQMk3XWRThF8+kbwypCiN6IWBS1r9YeXdFW2X7F
-aV4/tMfexsrb/vzZmCHQzOq6VaIMzOoILgNzP0QJls6dMzBq1CiMGTNW3ixs5K04DCtqNnJRVF81
-0m2tYDMpGrMQta4Cvas5WPHd6aE5FuP96u7VulkGZpPnRNSGVI8e3TFt2jRMmjRJDo6bTKE7dVGU
-kRFVHET9dLF6TadO6XL6gngdDCu6L6JKwQq5KGqa0kVRh5u6ItXSEtXu6yWVf2F7FDZd3QCuKAOz
-LoLLwNyL6EnNnj1blokJpZD6fiCVlpbK7dixY3KdwNraC/JnV65cwRtv/AdmzpzFsKIHs91ZrnxR
-VHFZfC4G4VX3Rtljm+MZCCicdlPmuoD1rsNR15sqKHhcFt0rKCholi/6gwRSMJfKYlhFCaMWRRX3
-/r2uF2GSLRctzWqXg9qIY7jmc0VNG4mrez/5ySS8+OKLhhfdu0mEkrjh+NSpU7IGlSjAJ6qE1tSc
-j8hAYliFCbEo6lTFi6LGW22YpfXHDHd/pa3t9nixpkllYII7zcHfxGcUZYxHjRqJ+fPnGx5UIpz2
-7NmDzz77TK7NV1paJkPJ5/NF9feDYRVCxKKoq8wH0UXxoqi/NA+DXfHpyme+kogvA3MrsaryjBkz
-5CKfRhGncMuWLcMHH3yIo0ePyprqRhKrQ4fTfC+GVYgxYlFUu0ltUPk9frzl2dbEvWhBfV+1Jjyj
-GPt78sknMXz4cMOOT4w3iTLDmzdvgcPhMPz96NWrF9q37xBW879YIibEiEVR15oOyflLoWqb7wSO
-u2ujpk3E7TA3V4UxyqJFv8aWLcEJKnHlcsaM6XLqQjhhWIWg9c7Dcv5SSPL68Ya/KKraw+gyxmfO
-nMHJk2WyNnowjBs3FqNHj5Y3RjOsqEnEoqh7TWdC8tjEnK1vndF1w7IY1zFybEeUcwlWKZesrCw8
-9/zzyM7ODtrCpwyrCPehZy8Qghd/3rJs+4v7DSOdqBnVpo1xa+yJW3OGDBksKy8Y6ckfPoHCwg+R
-n5cXlvcqMqxClOjBFIXYasb1jgYsa/g26tqiorJSbkYS6wNOnfo3hpya9e7dC7///dso/LAQAwYM
-CNubqnk1MIT9xrcZBegSMsfzjuVr+JzRN9fnXHV1YDtn+Knm4sWLMWXKFCxZsgSff74RdXUX4PM9
-XC9WLBmfl5ePyVMmy55UJJSkYViFsEPOanyDcgy0ZTT7sbga3XjHuysq2+HEiZM4eLAEY8aMkbPY
-jZQXCBaxifX8du/ejQMH9uPIkWMoKyvF2bNV8s9vnRwqys+Iq5Rpae3kslddu3bB4MFDZJXRSCtL
-w7AK9d6Vthlr8LfNfhzvW79BwxVXVLaB0+nE5s2bkJ+fJ5dEDwbRExo2bJjc6DqOWYW43Y4KlDQ2
-85VBlw+LG3dEdTts374DhcuWofxUOT+UDCu6m9f05l1Q8xPz/qi6teZuln+0HL/77e9QafBgOzGs
-wtbWxlKUNzbTElc+P37rKGIj3DgdXLr0HVkeprh4X1i/FnHf4YULtYbff8iwikK/sTRP7+oL3zFU
-uuvZADeIciyrVq3GtGnT8fbbb8syLeF3SrsdI0eOxL+++qq8eZphRUptaDiKM466oD/v656tfPPv
-QFRFeOGFBZg48Sn84Q//G/JfetGD+vTTTzFu3DhZJ37btq/wza5vUF8fPr+IeDUwXPj9eN1chP/C
-U0F7yj2Np3HIVc33/h69rB07dspNTBsYP/7Hcp6UWHrL6CkO90NMcygqKsKGDRuwbt06VFVV3TZv
-a/fuPXJ6RGZmZljMw2JYhZGVDQfwzzEj0NbWMijP97ppC9/0+yQqeS5e/N9yE8ElSh+LLT8/P/Df
-GUGZ8yR6d6KaqLhyWVS0FXv27JWBdS9Lly6Vs9pFyZhQp+m6eVjgMWI/lWItvgTdFkhl4894xQ3I
-l3wOePzGzfJO1O1oYbIG5b2rMHCsKkbT0cYcBz1IIxEOvweXvI67rlJtJLHSslg/MCcnF926dUNW
-dqactNkuNRUJCQ+2JLwIH1Globy8HGVlZThx4oQ8JS0u3o+amnPweB68xHFKSkqgJ2jMZ+rixXpc
-vqym3FHEhxVRKLNarTLM4uJi5Q3Td1qAQtRhFyFVVVUdlHpX7FkRETUBrwYSEcOKiIhhRUQMKyIi
-hhUREcOKiCLV/wswAAHsOrKwg0AbAAAAAElFTkSuQmCC" transform="matrix(1.1542 0 0 0.5846 355.1408 377.9771)">
-	</image>
-	<text transform="matrix(1.0246 0 0 1 708.8829 534.3848)" class="st0 st1">G</text>
-</g>
-<linearGradient id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="232.4624" y1="242.7381" x2="502.9402" y2="242.7381">
-	<stop  offset="0" style="stop-color:#2581C4"/>
-	<stop  offset="1" style="stop-color:#2581C4;stop-opacity:0"/>
-</linearGradient>
-<linearGradient id="SVGID_2_" gradientUnits="userSpaceOnUse" x1="231.9624" y1="242.7381" x2="503.4402" y2="242.7381">
-	<stop  offset="0" style="stop-color:#FFEF26"/>
-	<stop  offset="0.0595" style="stop-color:#FFE000"/>
-	<stop  offset="0.1303" style="stop-color:#FFD300"/>
-	<stop  offset="0.2032" style="stop-color:#FECB00"/>
-	<stop  offset="0.2809" style="stop-color:#FDC800"/>
-	<stop  offset="0.6685" style="stop-color:#F18F34"/>
-	<stop  offset="0.8876" style="stop-color:#E95F32"/>
-	<stop  offset="1" style="stop-color:#E3312D"/>
-</linearGradient>
-<rect x="232.46" y="107.5" class="st2" width="270.48" height="270.48"/>
-<text transform="matrix(0.2245 0 0 1 282.3805 309.9438)" class="st3 st0 st4">ANDERS</text>
-<text transform="matrix(0.2245 0 0 1 285.127 306.5432)" class="st5 st0 st4">ANDERS</text>
-</svg>
+
+<body lang="nl">
+
+  <div class="wrapper">
+   <svg id="andersMag" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+   viewBox="0 0 1480 1480" style="enable-background:new 0 0 1480 1480;" xml:space="preserve">
+
+   <rect id="maVierkant" x="830.5" y="1133.5" class="st0" width="308" height="308"/>
+   <g id="buiten_vierkant">
+   	<rect x="344" y="379" class="st1 buiten" width="794" height="749" stroke-width="5"/>
+   	<!-- <path d="M1136,381v745H346V381H1136 M1140,377H342v753h798V377L1140,377z"/> -->
+
+   <path id="m" class="st2" d="M904.2,1420v-123.1h37.2l22.3,84l22.1-84h37.3V1420H1000v-96.9l-24.4,96.9h-23.9l-24.4-96.9v96.9
+   	H904.2z"/>
+   <path id="a_Ma" class="st3" d="M1066.3,1358l-21.4-3.9c2.4-8.6,6.6-15,12.4-19.1c5.9-4.1,14.6-6.2,26.2-6.2
+   	c10.5,0,18.4,1.2,23.5,3.7c5.2,2.5,8.8,5.7,10.9,9.5c2.1,3.8,3.1,10.9,3.1,21.1l-0.3,27.5c0,7.8,0.4,13.6,1.1,17.3
+   	c0.8,3.7,2.2,7.7,4.2,12h-23.3c-0.6-1.6-1.4-3.9-2.3-7c-0.4-1.4-0.7-2.3-0.8-2.8c-4,3.9-8.3,6.9-12.9,8.8c-4.6,2-9.5,2.9-14.7,2.9
+   	c-9.2,0-16.4-2.5-21.7-7.5c-5.3-5-7.9-11.3-7.9-18.9c0-5,1.2-9.5,3.6-13.5c2.4-3.9,5.8-7,10.1-9.1c4.3-2.1,10.6-3.9,18.8-5.5
+   	c11-2.1,18.7-4,22.9-5.8v-2.4c0-4.5-1.1-7.8-3.4-9.7c-2.2-1.9-6.5-2.9-12.7-2.9c-4.2,0-7.5,0.8-9.8,2.5
+   	C1069.6,1351,1067.7,1353.9,1066.3,1358z M1097.8,1377.2c-3,1-7.8,2.2-14.4,3.6c-6.6,1.4-10.8,2.8-12.8,4.1c-3.1,2.2-4.6,5-4.6,8.3
+   	c0,3.3,1.2,6.2,3.7,8.6c2.5,2.4,5.6,3.6,9.4,3.6c4.3,0,8.3-1.4,12.2-4.2c2.9-2.1,4.7-4.7,5.6-7.8c0.6-2,0.9-5.8,0.9-11.5V1377.2z"/>
+   <path id="g" d="M1154.1,1425.9l27,3.3c0.4,3.1,1.5,5.3,3.1,6.5c2.2,1.7,5.8,2.5,10.6,2.5c6.2,0,10.8-0.9,13.9-2.8
+   	c2.1-1.2,3.6-3.2,4.7-6c0.7-2,1.1-5.6,1.1-10.8v-13c-7.1,9.6-16,14.4-26.7,14.4c-12,0-21.5-5.1-28.5-15.2c-5.5-8-8.2-18-8.2-29.9
+   	c0-14.9,3.6-26.4,10.8-34.3c7.2-7.9,16.1-11.8,26.8-11.8c11,0,20.1,4.8,27.3,14.5v-12.5h22.1v80c0,10.5-0.9,18.4-2.6,23.6
+   	c-1.7,5.2-4.2,9.3-7.3,12.3c-3.1,3-7.3,5.3-12.6,7c-5.2,1.7-11.9,2.5-19.9,2.5c-15.1,0-25.8-2.6-32.2-7.8
+   	c-6.3-5.2-9.5-11.7-9.5-19.7C1154,1427.9,1154,1427,1154.1,1425.9z M1175.2,1373.5c0,9.5,1.8,16.4,5.5,20.8
+   	c3.7,4.4,8.2,6.6,13.6,6.6c5.8,0,10.6-2.3,14.6-6.8c4-4.5,6-11.2,6-20c0-9.2-1.9-16.1-5.7-20.6c-3.8-4.5-8.6-6.7-14.4-6.7
+   	c-5.7,0-10.3,2.2-14,6.6C1177,1357.8,1175.2,1364.5,1175.2,1373.5z"/>
+   <path id="a_Anders" class="st4" d="M588.9,1045.1l-21.4-3.8c2.4-8.6,6.5-15,12.3-19.2c5.9-4.2,14.6-6.3,26.2-6.3
+   	c10.5-0.1,18.4,1.2,23.5,3.6c5.2,2.5,8.8,5.6,10.9,9.4c2.1,3.8,3.2,10.9,3.3,21.1l-0.1,27.5c0,7.8,0.4,13.6,1.2,17.3
+   	c0.8,3.7,2.2,7.7,4.3,11.9l-23.3,0.1c-0.6-1.6-1.4-3.9-2.3-7c-0.4-1.4-0.7-2.3-0.9-2.8c-4,3.9-8.3,6.9-12.9,8.9c-4.6,2-9.5,3-14.7,3
+   	c-9.2,0-16.4-2.4-21.7-7.4c-5.3-5-8-11.2-8-18.9c0-5,1.2-9.5,3.5-13.5c2.4-4,5.7-7,10.1-9.1c4.3-2.1,10.6-4,18.7-5.6
+   	c11-2.1,18.7-4.1,22.9-5.9l0-2.4c0-4.5-1.2-7.8-3.4-9.7c-2.2-1.9-6.5-2.9-12.7-2.8c-4.2,0-7.5,0.9-9.8,2.5
+   	C592.2,1038,590.3,1041,588.9,1045.1z M620.5,1064.1c-3,1-7.8,2.3-14.3,3.7c-6.5,1.4-10.8,2.8-12.8,4.2c-3.1,2.2-4.6,5-4.6,8.3
+   	c0,3.3,1.3,6.2,3.7,8.5c2.5,2.4,5.6,3.6,9.4,3.6c4.3,0,8.3-1.4,12.2-4.3c2.8-2.1,4.7-4.8,5.6-7.8c0.6-2,0.9-5.9,0.9-11.5
+   	L620.5,1064.1z"/>
+   <path id="n" class="st4" d="M749.1,1107h-23.6v-45.5c0-9.6-0.5-15.9-1.5-18.7c-1-2.8-2.6-5-4.9-6.6
+   	c-2.3-1.6-5-2.4-8.2-2.4c-4.1,0-7.8,1.1-11,3.4c-3.2,2.2-5.5,5.2-6.7,8.9c-1.2,3.7-1.8,10.5-1.8,20.5v40.4h-23.6v-89.2h21.9v13.1
+   	c7.8-10.1,17.6-15.1,29.4-15.1c5.2,0,10,0.9,14.3,2.8c4.3,1.9,7.6,4.3,9.8,7.2c2.2,2.9,3.8,6.2,4.6,9.9c0.9,3.7,1.3,9,1.3,15.9V1107
+   	z"/>
+   <path id="d" class="st4" d="M853.8,1107h-21.9v-13.1c-3.6,5.1-7.9,8.9-12.9,11.4s-10,3.7-15,3.7c-10.2,0-19-4.1-26.3-12.4
+   	c-7.3-8.3-11-19.8-11-34.6c0-15.1,3.6-26.6,10.7-34.5c7.1-7.9,16.1-11.8,27-11.8c10,0,18.6,4.1,25.9,12.4v-44.3h23.6V1107z
+   	 M790.8,1060.5c0,9.5,1.3,16.4,3.9,20.7c3.8,6.2,9.1,9.2,16,9.2c5.4,0,10-2.3,13.9-6.9c3.8-4.6,5.7-11.5,5.7-20.7
+   	c0-10.2-1.8-17.6-5.5-22.1c-3.7-4.5-8.4-6.8-14.2-6.8c-5.6,0-10.3,2.2-14.1,6.7S790.8,1051.6,790.8,1060.5z"/>
+   <path id="e" class="st4" d="M928.7,1078.6l23.5,3.9c-3,8.6-7.8,15.2-14.3,19.7c-6.5,4.5-14.7,6.8-24.5,6.8
+   	c-15.5,0-27-5.1-34.4-15.2c-5.9-8.1-8.8-18.4-8.8-30.7c0-14.8,3.9-26.4,11.6-34.7c7.7-8.4,17.5-12.6,29.3-12.6
+   	c13.3,0,23.7,4.4,31.4,13.1c7.7,8.8,11.3,22.2,11,40.3h-59.1c0.2,7,2.1,12.4,5.7,16.3c3.6,3.9,8.2,5.8,13.6,5.8c3.7,0,6.8-1,9.3-3
+   	S927.5,1083.1,928.7,1078.6z M930.1,1054.8c-0.2-6.8-1.9-12-5.3-15.6c-3.4-3.6-7.4-5.3-12.3-5.3c-5.2,0-9.4,1.9-12.8,5.6
+   	c-3.4,3.8-5,8.8-5,15.3H930.1z"/>
+   <path id="r" class="st4" d="M995.3,1107h-23.6v-89.2h21.9v12.7c3.8-6,7.1-9.9,10.1-11.8c3-1.9,6.4-2.9,10.2-2.9
+   	c5.4,0,10.6,1.5,15.5,4.5l-7.3,20.6c-4-2.6-7.7-3.9-11.1-3.9c-3.3,0-6.1,0.9-8.4,2.7c-2.3,1.8-4.1,5.1-5.4,9.9
+   	c-1.3,4.8-2,14.7-2,29.9V1107z"/>
+   <path id="s" class="st4" d="M1031.4,1081.5l23.7-3.6c1,4.6,3.1,8.1,6.1,10.5c3.1,2.4,7.4,3.6,12.9,3.6
+   	c6.1,0,10.7-1.1,13.8-3.4c2.1-1.6,3.1-3.7,3.1-6.3c0-1.8-0.6-3.3-1.7-4.5c-1.2-1.1-3.8-2.2-7.9-3.1c-19-4.2-31.1-8-36.2-11.5
+   	c-7.1-4.8-10.6-11.5-10.6-20.1c0-7.7,3.1-14.2,9.2-19.5c6.1-5.3,15.6-7.9,28.4-7.9c12.2,0,21.3,2,27.2,6c5.9,4,10,9.9,12.3,17.6
+   	l-22.3,4.1c-1-3.5-2.8-6.1-5.4-8c-2.7-1.8-6.5-2.8-11.4-2.8c-6.2,0-10.7,0.9-13.4,2.6c-1.8,1.2-2.7,2.8-2.7,4.8
+   	c0,1.7,0.8,3.1,2.4,4.3c2.1,1.6,9.5,3.8,22,6.6c12.6,2.9,21.3,6.4,26.3,10.5c4.9,4.2,7.4,10.1,7.4,17.6c0,8.2-3.4,15.2-10.2,21.1
+   	c-6.8,5.9-16.9,8.8-30.3,8.8c-12.2,0-21.8-2.5-28.8-7.4C1038.2,1096.7,1033.6,1090,1031.4,1081.5z"/>
+   </g>
+      <path id="hart" data-name="hart" class="cls-6" d="M740.6,607.06c0-57,47.65-103.06,106.53-103.06A103.74,103.74,0,0,1,951,607.72c0,151-176.45,167.56-210.4,273.28-34-105.72-210.41-122.23-210.41-273.28A103.74,103.74,0,0,1,634.06,504C693,504,740.6,550.1,740.6,607.06Z" transform="translate(0 0)"/>
+   </svg>
+
+  </div>
+  <div id="gebouw"></div>
 
 
-    </div>
-    <div class="svg2">
-        
-    </div>
+ <script src="greensock.js"></script>
+ <script type="text/javascript" src="andersMag.js"></script>
+
 </body>
 </html>
