--- a/index.html
+++ b/index.html
@@ -1,81 +1,80 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
-<meta charset="utf-8">
-  <title>Anders mag</title>
-   <meta name="author" content="Theo den Blanken">
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link rel="stylesheet" href="andersMag.css">
-
+    <meta charset="utf-8">
+    <title>Anders mag</title>
+    <meta name="author" content="Matthijs Berghuis">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body lang="nl">
 
-  <div class="wrapper">
-   <svg id="andersMag" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-   viewBox="0 0 1480 1480" style="enable-background:new 0 0 1480 1480;" xml:space="preserve">
+<div class="wrapper">
+    <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 798 1065">
+        <defs>
+            <style>.cls-1 {
+                stroke: #000;
+            }
+            .cls-1, .cls-4 {
+                stroke-miterlimit: 10;
+            }
+            .cls-2 {
+                fill: rgba(0,0,0,0);
+            }
+            .cls-3 {
+                fill: #ed1e79;
+            }
+            .cls-4, .cls-5 {
+                stroke: #fff;
+            }
+            .cls-5 {
+                fill: none;
+                stroke-width: 2px;
+            }
+		</style>
+        </defs>
+        <title>andersMag</title>
+        <rect id="_maRechthoek_" data-name="&lt;maRechthoek&gt;" class="cls-1" x="488.5" y="756.5" width="308"
+              height="308"/>
+        <g id="_buiten_" data-name="&lt;buiten&gt;">
+            <rect class="cls-2" x="2" y="2" width="794" height="749"/>
+            <path d="M1136,381v745H346V381h790m4-4H342v753h798V377Z" transform="translate(-342 -377)"/>
+        </g>
+        <path id="_m" data-name="&lt;m" class="cls-3"
+              d="M904.18,1420V1296.87h37.2l22.34,84,22.09-84h37.29V1420H1000v-96.92L975.56,1420H951.63l-24.36-96.92V1420Z"
+              transform="translate(-342 -377)"/>
+        <path id="_aMa_" data-name="&lt;aMa&gt;" class="cls-4"
+              d="M1066.26,1358l-21.42-3.86q3.62-12.93,12.43-19.15t26.21-6.21q15.78,0,23.51,3.73t10.88,9.49q3.15,5.76,3.15,21.12l-.25,27.55q0,11.76,1.13,17.34a50.7,50.7,0,0,0,4.24,12h-23.35c-.61-1.56-1.37-3.89-2.26-7-.4-1.4-.68-2.32-.84-2.77a42.69,42.69,0,0,1-12.94,8.82,37,37,0,0,1-14.7,2.94q-13.77,0-21.71-7.48a24.83,24.83,0,0,1-7.93-18.89,25.32,25.32,0,0,1,3.61-13.48,23.59,23.59,0,0,1,10.12-9.07q6.51-3.15,18.77-5.5,16.54-3.1,22.93-5.8v-2.35q0-6.81-3.36-9.7t-12.68-2.9q-6.3,0-9.83,2.48T1066.26,1358Zm31.58,19.15a147.55,147.55,0,0,1-14.36,3.61q-9.82,2.1-12.85,4.12-4.62,3.27-4.62,8.31a11.59,11.59,0,0,0,3.69,8.57,12.91,12.91,0,0,0,9.41,3.61,20.47,20.47,0,0,0,12.18-4.2,14.77,14.77,0,0,0,5.62-7.81q.93-3,.93-11.51Z"
+              transform="translate(-342 -377)"/>
+        <path id="_aAnders_" data-name="&lt;aAnders&gt;" class="cls-5"
+              d="M588.86,1045.1l-21.44-3.75q3.54-13,12.33-19.21t26.18-6.35q15.78-.07,23.53,3.62t10.92,9.43q3.18,5.75,3.26,21.11l-.11,27.55q.06,11.76,1.22,17.33a49.89,49.89,0,0,0,4.3,12l-23.35.12c-.62-1.56-1.39-3.89-2.3-7-.4-1.4-.69-2.32-.86-2.77a42.65,42.65,0,0,1-12.88,8.89,37.21,37.21,0,0,1-14.69,3q-13.77.08-21.74-7.37a24.83,24.83,0,0,1-8-18.85,25.4,25.4,0,0,1,3.55-13.5,23.52,23.52,0,0,1,10.07-9.12q6.5-3.18,18.74-5.6,16.53-3.18,22.9-5.91v-2.35q0-6.8-3.41-9.68t-12.69-2.84q-6.3,0-9.82,2.53T588.86,1045.1Zm31.67,19q-4.53,1.53-14.34,3.69T593.36,1072q-4.61,3.29-4.58,8.33a11.56,11.56,0,0,0,3.74,8.55,12.87,12.87,0,0,0,9.42,3.56,20.42,20.42,0,0,0,12.16-4.26,14.74,14.74,0,0,0,5.59-7.83q.9-3,.86-11.52Z"
+              transform="translate(-342 -377)"/>
+        <path id="_n_" data-name="&lt;n&gt;" class="cls-5"
+              d="M749.09,1107h-23.6v-45.52q0-14.45-1.51-18.68a13.12,13.12,0,0,0-4.91-6.6,14.11,14.11,0,0,0-8.19-2.35,18.91,18.91,0,0,0-11,3.36,17,17,0,0,0-6.68,8.9q-1.8,5.55-1.8,20.5V1107H667.8V1017.8h21.92v13.1q11.67-15.12,29.39-15.11a35.33,35.33,0,0,1,14.28,2.81,24,24,0,0,1,9.78,7.18,26,26,0,0,1,4.62,9.91c.87,3.69,1.3,9,1.3,15.87Z"
+              transform="translate(-342 -377)"/>
+        <path id="_d_" data-name="&lt;d&gt;" class="cls-5"
+              d="M853.83,1107H831.91v-13.1A35.4,35.4,0,0,1,819,1105.27a33.11,33.11,0,0,1-15,3.74q-15.37,0-26.33-12.39t-11-34.56q0-22.68,10.66-34.48t27-11.79q15,0,25.87,12.42V983.87h23.6Zm-63-46.53q0,14.28,3.95,20.67,5.72,9.24,16,9.23,8.14,0,13.85-6.93t5.71-20.7q0-15.36-5.54-22.13a17.56,17.56,0,0,0-14.19-6.76,17.74,17.74,0,0,0-14.07,6.68Q790.84,1047.2,790.84,1060.46Z"
+              transform="translate(-342 -377)"/>
+        <path id="_e_" data-name="&lt;e&gt;" class="cls-5"
+              d="M928.74,1078.61l23.52,3.94q-4.53,12.95-14.32,19.7T913.46,1109q-23.26,0-34.43-15.2-8.82-12.18-8.82-30.74,0-22.17,11.59-34.73t29.31-12.55q19.9,0,31.41,13.14t11,40.27H894.39q.25,10.5,5.72,16.33a17.81,17.81,0,0,0,13.6,5.84,14.47,14.47,0,0,0,9.32-3Q926.81,1085.32,928.74,1078.61Zm1.35-23.86q-.26-10.24-5.29-15.58a17,17,0,0,0-25,.3q-5,5.63-5,15.28Z"
+              transform="translate(-342 -377)"/>
+        <path id="_r_" data-name="&lt;r&gt;" class="cls-5"
+              d="M995.34,1107h-23.6V1017.8h21.92v12.68q5.63-9,10.12-11.84a18.67,18.67,0,0,1,10.21-2.85,30,30,0,0,1,15.54,4.45l-7.31,20.57q-6-3.86-11.09-3.86a13.12,13.12,0,0,0-8.4,2.73q-3.43,2.73-5.41,9.87t-2,29.9Z"
+              transform="translate(-342 -377)"/>
+        <path id="_s_" data-name="&lt;s&gt;" class="cls-5"
+              d="M1031.37,1081.54l23.69-3.61q1.5,6.9,6.13,10.46t12.93,3.57q9.15,0,13.77-3.36a7.51,7.51,0,0,0,3.11-6.3,6.2,6.2,0,0,0-1.68-4.45c-1.17-1.12-3.81-2.15-7.89-3.11q-28.56-6.3-36.2-11.5a23,23,0,0,1-10.58-20.08q0-11.58,9.15-19.48t28.39-7.89q18.3,0,27.21,6t12.26,17.63l-22.25,4.12a13.81,13.81,0,0,0-5.42-8q-4-2.77-11.38-2.77-9.33,0-13.35,2.6a5.59,5.59,0,0,0-2.69,4.79,5.19,5.19,0,0,0,2.35,4.28q3.19,2.36,22,6.64t26.32,10.5q7.39,6.3,7.4,17.55,0,12.27-10.25,21.08t-30.32,8.82q-18.22,0-28.85-7.39A34.1,34.1,0,0,1,1031.37,1081.54Z"
+              transform="translate(-342 -377)"/>
+        <path id="hart" class="cls-6"
+              d="M740.6,607.06c0-57,47.65-103.06,106.53-103.06A103.74,103.74,0,0,1,951,607.72c0,151-176.45,167.56-210.4,273.28-34-105.72-210.41-122.23-210.41-273.28A103.74,103.74,0,0,1,634.06,504C693,504,740.6,550.1,740.6,607.06Z"
+              transform="translate(-342 -377)"/>
+    </svg>
 
-   <rect id="maVierkant" x="830.5" y="1133.5" class="st0" width="308" height="308"/>
-   <g id="buiten_vierkant">
-   	<rect x="344" y="379" class="st1 buiten" width="794" height="749" stroke-width="5"/>
-   	<!-- <path d="M1136,381v745H346V381H1136 M1140,377H342v753h798V377L1140,377z"/> -->
+</div>
 
-   <path id="m" class="st2" d="M904.2,1420v-123.1h37.2l22.3,84l22.1-84h37.3V1420H1000v-96.9l-24.4,96.9h-23.9l-24.4-96.9v96.9
-   	H904.2z"/>
-   <path id="a_Ma" class="st3" d="M1066.3,1358l-21.4-3.9c2.4-8.6,6.6-15,12.4-19.1c5.9-4.1,14.6-6.2,26.2-6.2
-   	c10.5,0,18.4,1.2,23.5,3.7c5.2,2.5,8.8,5.7,10.9,9.5c2.1,3.8,3.1,10.9,3.1,21.1l-0.3,27.5c0,7.8,0.4,13.6,1.1,17.3
-   	c0.8,3.7,2.2,7.7,4.2,12h-23.3c-0.6-1.6-1.4-3.9-2.3-7c-0.4-1.4-0.7-2.3-0.8-2.8c-4,3.9-8.3,6.9-12.9,8.8c-4.6,2-9.5,2.9-14.7,2.9
-   	c-9.2,0-16.4-2.5-21.7-7.5c-5.3-5-7.9-11.3-7.9-18.9c0-5,1.2-9.5,3.6-13.5c2.4-3.9,5.8-7,10.1-9.1c4.3-2.1,10.6-3.9,18.8-5.5
-   	c11-2.1,18.7-4,22.9-5.8v-2.4c0-4.5-1.1-7.8-3.4-9.7c-2.2-1.9-6.5-2.9-12.7-2.9c-4.2,0-7.5,0.8-9.8,2.5
-   	C1069.6,1351,1067.7,1353.9,1066.3,1358z M1097.8,1377.2c-3,1-7.8,2.2-14.4,3.6c-6.6,1.4-10.8,2.8-12.8,4.1c-3.1,2.2-4.6,5-4.6,8.3
-   	c0,3.3,1.2,6.2,3.7,8.6c2.5,2.4,5.6,3.6,9.4,3.6c4.3,0,8.3-1.4,12.2-4.2c2.9-2.1,4.7-4.7,5.6-7.8c0.6-2,0.9-5.8,0.9-11.5V1377.2z"/>
-   <path id="g" d="M1154.1,1425.9l27,3.3c0.4,3.1,1.5,5.3,3.1,6.5c2.2,1.7,5.8,2.5,10.6,2.5c6.2,0,10.8-0.9,13.9-2.8
-   	c2.1-1.2,3.6-3.2,4.7-6c0.7-2,1.1-5.6,1.1-10.8v-13c-7.1,9.6-16,14.4-26.7,14.4c-12,0-21.5-5.1-28.5-15.2c-5.5-8-8.2-18-8.2-29.9
-   	c0-14.9,3.6-26.4,10.8-34.3c7.2-7.9,16.1-11.8,26.8-11.8c11,0,20.1,4.8,27.3,14.5v-12.5h22.1v80c0,10.5-0.9,18.4-2.6,23.6
-   	c-1.7,5.2-4.2,9.3-7.3,12.3c-3.1,3-7.3,5.3-12.6,7c-5.2,1.7-11.9,2.5-19.9,2.5c-15.1,0-25.8-2.6-32.2-7.8
-   	c-6.3-5.2-9.5-11.7-9.5-19.7C1154,1427.9,1154,1427,1154.1,1425.9z M1175.2,1373.5c0,9.5,1.8,16.4,5.5,20.8
-   	c3.7,4.4,8.2,6.6,13.6,6.6c5.8,0,10.6-2.3,14.6-6.8c4-4.5,6-11.2,6-20c0-9.2-1.9-16.1-5.7-20.6c-3.8-4.5-8.6-6.7-14.4-6.7
-   	c-5.7,0-10.3,2.2-14,6.6C1177,1357.8,1175.2,1364.5,1175.2,1373.5z"/>
-   <path id="a_Anders" class="st4" d="M588.9,1045.1l-21.4-3.8c2.4-8.6,6.5-15,12.3-19.2c5.9-4.2,14.6-6.3,26.2-6.3
-   	c10.5-0.1,18.4,1.2,23.5,3.6c5.2,2.5,8.8,5.6,10.9,9.4c2.1,3.8,3.2,10.9,3.3,21.1l-0.1,27.5c0,7.8,0.4,13.6,1.2,17.3
-   	c0.8,3.7,2.2,7.7,4.3,11.9l-23.3,0.1c-0.6-1.6-1.4-3.9-2.3-7c-0.4-1.4-0.7-2.3-0.9-2.8c-4,3.9-8.3,6.9-12.9,8.9c-4.6,2-9.5,3-14.7,3
-   	c-9.2,0-16.4-2.4-21.7-7.4c-5.3-5-8-11.2-8-18.9c0-5,1.2-9.5,3.5-13.5c2.4-4,5.7-7,10.1-9.1c4.3-2.1,10.6-4,18.7-5.6
-   	c11-2.1,18.7-4.1,22.9-5.9l0-2.4c0-4.5-1.2-7.8-3.4-9.7c-2.2-1.9-6.5-2.9-12.7-2.8c-4.2,0-7.5,0.9-9.8,2.5
-   	C592.2,1038,590.3,1041,588.9,1045.1z M620.5,1064.1c-3,1-7.8,2.3-14.3,3.7c-6.5,1.4-10.8,2.8-12.8,4.2c-3.1,2.2-4.6,5-4.6,8.3
-   	c0,3.3,1.3,6.2,3.7,8.5c2.5,2.4,5.6,3.6,9.4,3.6c4.3,0,8.3-1.4,12.2-4.3c2.8-2.1,4.7-4.8,5.6-7.8c0.6-2,0.9-5.9,0.9-11.5
-   	L620.5,1064.1z"/>
-   <path id="n" class="st4" d="M749.1,1107h-23.6v-45.5c0-9.6-0.5-15.9-1.5-18.7c-1-2.8-2.6-5-4.9-6.6
-   	c-2.3-1.6-5-2.4-8.2-2.4c-4.1,0-7.8,1.1-11,3.4c-3.2,2.2-5.5,5.2-6.7,8.9c-1.2,3.7-1.8,10.5-1.8,20.5v40.4h-23.6v-89.2h21.9v13.1
-   	c7.8-10.1,17.6-15.1,29.4-15.1c5.2,0,10,0.9,14.3,2.8c4.3,1.9,7.6,4.3,9.8,7.2c2.2,2.9,3.8,6.2,4.6,9.9c0.9,3.7,1.3,9,1.3,15.9V1107
-   	z"/>
-   <path id="d" class="st4" d="M853.8,1107h-21.9v-13.1c-3.6,5.1-7.9,8.9-12.9,11.4s-10,3.7-15,3.7c-10.2,0-19-4.1-26.3-12.4
-   	c-7.3-8.3-11-19.8-11-34.6c0-15.1,3.6-26.6,10.7-34.5c7.1-7.9,16.1-11.8,27-11.8c10,0,18.6,4.1,25.9,12.4v-44.3h23.6V1107z
-   	 M790.8,1060.5c0,9.5,1.3,16.4,3.9,20.7c3.8,6.2,9.1,9.2,16,9.2c5.4,0,10-2.3,13.9-6.9c3.8-4.6,5.7-11.5,5.7-20.7
-   	c0-10.2-1.8-17.6-5.5-22.1c-3.7-4.5-8.4-6.8-14.2-6.8c-5.6,0-10.3,2.2-14.1,6.7S790.8,1051.6,790.8,1060.5z"/>
-   <path id="e" class="st4" d="M928.7,1078.6l23.5,3.9c-3,8.6-7.8,15.2-14.3,19.7c-6.5,4.5-14.7,6.8-24.5,6.8
-   	c-15.5,0-27-5.1-34.4-15.2c-5.9-8.1-8.8-18.4-8.8-30.7c0-14.8,3.9-26.4,11.6-34.7c7.7-8.4,17.5-12.6,29.3-12.6
-   	c13.3,0,23.7,4.4,31.4,13.1c7.7,8.8,11.3,22.2,11,40.3h-59.1c0.2,7,2.1,12.4,5.7,16.3c3.6,3.9,8.2,5.8,13.6,5.8c3.7,0,6.8-1,9.3-3
-   	S927.5,1083.1,928.7,1078.6z M930.1,1054.8c-0.2-6.8-1.9-12-5.3-15.6c-3.4-3.6-7.4-5.3-12.3-5.3c-5.2,0-9.4,1.9-12.8,5.6
-   	c-3.4,3.8-5,8.8-5,15.3H930.1z"/>
-   <path id="r" class="st4" d="M995.3,1107h-23.6v-89.2h21.9v12.7c3.8-6,7.1-9.9,10.1-11.8c3-1.9,6.4-2.9,10.2-2.9
-   	c5.4,0,10.6,1.5,15.5,4.5l-7.3,20.6c-4-2.6-7.7-3.9-11.1-3.9c-3.3,0-6.1,0.9-8.4,2.7c-2.3,1.8-4.1,5.1-5.4,9.9
-   	c-1.3,4.8-2,14.7-2,29.9V1107z"/>
-   <path id="s" class="st4" d="M1031.4,1081.5l23.7-3.6c1,4.6,3.1,8.1,6.1,10.5c3.1,2.4,7.4,3.6,12.9,3.6
-   	c6.1,0,10.7-1.1,13.8-3.4c2.1-1.6,3.1-3.7,3.1-6.3c0-1.8-0.6-3.3-1.7-4.5c-1.2-1.1-3.8-2.2-7.9-3.1c-19-4.2-31.1-8-36.2-11.5
-   	c-7.1-4.8-10.6-11.5-10.6-20.1c0-7.7,3.1-14.2,9.2-19.5c6.1-5.3,15.6-7.9,28.4-7.9c12.2,0,21.3,2,27.2,6c5.9,4,10,9.9,12.3,17.6
-   	l-22.3,4.1c-1-3.5-2.8-6.1-5.4-8c-2.7-1.8-6.5-2.8-11.4-2.8c-6.2,0-10.7,0.9-13.4,2.6c-1.8,1.2-2.7,2.8-2.7,4.8
-   	c0,1.7,0.8,3.1,2.4,4.3c2.1,1.6,9.5,3.8,22,6.6c12.6,2.9,21.3,6.4,26.3,10.5c4.9,4.2,7.4,10.1,7.4,17.6c0,8.2-3.4,15.2-10.2,21.1
-   	c-6.8,5.9-16.9,8.8-30.3,8.8c-12.2,0-21.8-2.5-28.8-7.4C1038.2,1096.7,1033.6,1090,1031.4,1081.5z"/>
-   </g>
-      <path id="hart" data-name="hart" class="cls-6" d="M740.6,607.06c0-57,47.65-103.06,106.53-103.06A103.74,103.74,0,0,1,951,607.72c0,151-176.45,167.56-210.4,273.28-34-105.72-210.41-122.23-210.41-273.28A103.74,103.74,0,0,1,634.06,504C693,504,740.6,550.1,740.6,607.06Z" transform="translate(0 0)"/>
-   </svg>
-
-  </div>
-  <div id="gebouw"></div>
-
-
- <script src="greensock.js"></script>
- <script type="text/javascript" src="andersMag.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="greensock.js"></script>
 
 </body>
 </html>
